<resources>
    <string name="app_name">Regent Country Club</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="name">Name</string>
    <string name="action_save">Save</string>
    <string name="mobile">Mobile</string>
    <string name="userProfile">User Profile</string>
    <string name="nic">NIC</string>
    <string name="roomType">Room Type</string>
    <string name="checkAvailabi">Check Availability</string>
    <string name="noOfRooms">No of Rooms</string>
    <string name="noOfNights">No of Nights</string>


    <string name="address">Address</string>

    <string name="notAMember">Not a member yet? Get registered now...</string>

    <string-array name="room_types_arr">
        <item>Luxury</item>
        <item>Economic</item>
        <item>Honeymoon</item>
        <item>Deluxe</item>

    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="OrderNow">Order now</string>

    <string name="backdrop_title_food">Order your favourite foods</string>

    <string name="backdrop_title">Liquor Name</string>
    <string name="backdrop_subtitle">Liquor Details</string>
    <string name="backdrop_subtitle_food">Food Details</string>

    <string name="btn_room_management">Room Managemnt</string>
    <string name="btn_food_managemnt">Food Management</string>
    <string name="btn_liquor_managemnt">Liquor Management</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>




    <string name="action_example">Example action</string>
</resources>
