<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".com.functions.Booking.Booking">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/btn_dropdown"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/noOfRooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/noOfRooms"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />


        <EditText
            android:id="@+id/noofNights"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/noOfNights"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />


        <!-- Login Button -->
        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="265dp"
            android:layout_height="247dp"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/btn_checkAvailability"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/checkAvailabi"
            android:textColor="@android:color/black" />




    </LinearLayout>

</android.support.constraint.ConstraintLayout>